--- a/src/App.css
+++ b/src/App.css
@@ -36,6 +36,10 @@ a{
     color: var(--background-color);
 }
 /* Custom Classes */
+.container-sm{
+    margin: 0 auto;
+    max-width: 1100px !important;  
+}
 .container{
     margin: 0 auto;
     max-width: 1200px;
@@ -63,7 +67,7 @@ a{
     margin-top: 3rem;
 }
 .mt-4{
-    margin-top: 4rem;
+    margin-top: 10rem;
 }
 .ptb-2{
     padding: 4rem 0;
