--- a/src/App.css
+++ b/src/App.css
@@ -20,14 +20,20 @@ body{
 h1{
     font-size: 2rem;
 }
-h1, h2, h3, h4{
+h1, h2{
     font-family: "Gloock", serif;
     line-height: 1.1;
     color: var(--primary-color);
     text-transform: capitalize;
 }
+h3, h4{
+    font-family: "Montserrat", serif;
+    line-height: 1.1;
+    color: var(--primary-color);
+    text-transform: capitalize;
+}
 p{
-    line-height: 1.5;
+    line-height: 1.75;
     color: var(--primary-color);
     opacity: var(--paragraph-opacity);
 }
@@ -64,7 +70,7 @@ a{
     margin-top: 2rem;
 }
 .mt-3{
-    margin-top: 3rem;
+    margin-top: 5rem;
 }
 .mt-4{
     margin-top: 10rem;
@@ -101,6 +107,7 @@ a{
 }
 .bg-dark{
     background-color: var(--primary-color);
+    color: var(--background-color);
 }
 .dark{
     color: var(--primary-color);
