--- a/src/components/footer/footer.css
+++ b/src/components/footer/footer.css
@@ -1,8 +1,20 @@
 .site-footer{
-    background-color: var(--primary-color);
     text-align: center;
     padding: 2rem 0;
 }
-.site-footer h1{
+.site-footer .grid{
+    grid-template-columns: 30% 40% 30%;
+}
+.site-footer .copyright p{
     color: #fff;
+}
+.site-footer .links li{
+    list-style-type: none;
+    display: inline-block;
+    margin-right: 2.5rem;
+    opacity: 0.7;
+    transition: opacity 0.3s ease;
+}
+.site-footer .links li:hover{
+    opacity: 1;
 }
