--- a/src/sections/about-consultant/about-consultant.css
+++ b/src/sections/about-consultant/about-consultant.css
@@ -7,3 +7,8 @@
     max-height: 500px;
     margin-right: 1rem;
 }
+@media screen and (min-width: 768px){
+    .about-consultant{
+        display: block;
+    }
+}
