--- a/src/components/card/card.css
+++ b/src/components/card/card.css
@@ -8,10 +8,15 @@
     margin-bottom: 1rem;
 }
 .card-header img{
+    width: 5px;
     max-height: 100px;
 }
 .card-header .card-heading{
     margin-left: 1rem;
     line-height: 1.3;
-    font-size: 1.4rem;
+    font-size: 1.2rem;
+}
+.card-content{
+    padding-left: 1.2rem;
+    font-size: 0.85rem;
 }
