--- a/src/components/light-card/light-card.css
+++ b/src/components/light-card/light-card.css
@@ -22,6 +22,9 @@
     transform: translate(-50%, -54%);
 } */
 .card-light h3{
-    font-size: 1.5rem;
+    font-size: 1.3rem;
     line-height: 1.3;
+}
+.card-light p{
+    font-size: 0.85rem;
 }
