Created "About Consultant Page", relocated consultant information. Multiple compoonents and sections of the page where created, json files with consultant information and images were created and some media queries were added to previous code.

--- a/src/components/locations-managed/locations-managed.css
+++ b/src/components/locations-managed/locations-managed.css
@@ -9,3 +9,7 @@
     text-transform: uppercase;
     font-weight: 900;
 }
+.locations-managed-section .grid{
+    grid-template-columns: 1fr 1fr 1fr 1fr;
+    gap: 2rem 8rem;
+}
